Fixes contrast, adds more colors, reviews header and footer style

--- a/app/assets/stylesheets/layouts/_footer.sass
+++ b/app/assets/stylesheets/layouts/_footer.sass
@@ -19,6 +19,9 @@ footer
     font-weight: bold
 
 .back-to-top
+  position: absolute
+  right: 0
+  bottom: 0
   .fa-stack
     .fa-square
       color: $dark-gray
