--- a/app/assets/stylesheets/pages/_home.sass
+++ b/app/assets/stylesheets/pages/_home.sass
@@ -21,7 +21,7 @@
           box-shadow: 0 5px 5px 1px $dark-gray
       .audience
         width: 190px
-        color: $blue-highlight
+        color: $medium-blue
         font-weight: bold
         margin-bottom: 2rem
         &:after
@@ -30,7 +30,7 @@
           content: ""
           height: 5px
           width: 40px
-          background-color: $blue-highlight
+          background-color: $medium-blue
       .right-0
         margin-right: 0
         margin-left: auto
