--- a/app/assets/stylesheets/pages/_how_it_works.sass
+++ b/app/assets/stylesheets/pages/_how_it_works.sass
@@ -27,9 +27,9 @@
     .fold-image
       position: relative
       h3
-        margin-top: 6rem
-        @include breakpoint(small-only)
-          margin-top: 0
+        margin-top: 0
+        @include breakpoint(medium)
+          margin-top: 6rem
   .sections-description
     background-color: $light-gray
     padding-top: 5rem
